--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,12 +27,15 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build --if-present
-      - run: npm test -- --coverage || exit 0 
+      - run: npm test || echo "Tests failed but continuing workflow"
+      - run: npm run coverage
+        continue-on-error: true  # Allow the next steps to run even if this step fails
 
       - name: Coveralls
         uses: coverallsapp/github-action@v2
         env:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+          continue-on-error: true  # This ensures Coveralls runs even if previous steps have failed
 
 
