--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,41 +1,32 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Node.js CI
+name: Tests
 
 on:
   push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
+    branches:
+      - main  
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+  test:
+    runs-on: ubuntu-latest 
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test || echo "Tests failed but continuing workflow"
-      - run: npm run coverage
-        continue-on-error: true  # Allow the next steps to run even if this step fails
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Coveralls
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 'v22.11.0' 
+
+      - name: Install dependencies
+        run: |
+          npm install  
+
+      - name: Run tests with coverage
+        run: npm test -- --coverage || exit 0 # This ensures Coveralls runs even if previous steps have failed
+
+      - name: Upload coverage to Coveralls
         uses: coverallsapp/github-action@v2
         env:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-          continue-on-error: true  # This ensures Coveralls runs even if previous steps have failed
-
-
