--- a/.github/workflows/node_test.yml
+++ b/.github/workflows/node_test.yml
@@ -28,3 +28,4 @@ jobs:
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
       run: npm run coverage
+      continue-on-error: true  # This ensures Coveralls runs even if previous steps have failed
