--- a/.github/workflows/node_test.yml
+++ b/.github/workflows/node_test.yml
@@ -23,9 +23,12 @@ jobs:
 
     - name: Run Tests
       run: npm test || echo "Tests failed but continuing workflow"
+    - run: npm run coverage
+      continue-on-error: true  # Allow the next steps to run even if this step fails
 
-    - name: Run Coverage and Upload to Coveralls
+    - name: Coveralls
+      uses: coverallsapp/github-action@v2
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-      run: npm run coverage
-      continue-on-error: true  # This ensures Coveralls runs even if previous steps have failed
+   
+     
